[package]
name = "wiggler"
version = "0.1.0"
authors = ["tekjar <k.teza1@gmail.com>"]

[dependencies]
cortex-m = "0.3.0"
cortex-m-semihosting = "0.2.0"
cortex-m-rtfm = "0.2.1"
f3 = {git = "https://github.com/japaric/f3"}

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.3"

[profile.release]
debug = true
lto = true
